added some other changes

--- a/EduHome/Views/Course/Detail.cshtml
+++ b/EduHome/Views/Course/Detail.cshtml
@@ -13,7 +13,7 @@
             <div class="col-md-8">
                 <div class="courses-details">
                     <div class="courses-details-img">
-                        <img src="~/img/course/@Model.Image" alt="courses-details">
+                        <img width="100%" src="~/img/course/@Model.Image" alt="courses-details">
                     </div>
                     <div class="course-details-content">
                         <h2>@Model.Name</h2>
