--- a/EduHome/Views/Event/Detail.cshtml
+++ b/EduHome/Views/Event/Detail.cshtml
@@ -13,7 +13,7 @@
             <div class="col-md-8">
                 <div class="event-details">
                     <div class="event-details-img">
-                        <img src="~/img/event/@Model.Image" alt="event-details">
+                        <img width="100%" src="~/img/event/@Model.Image" alt="event-details">
                         <div class="event-date">
                             <h3>@Model.Date.ToString("dd MMMM")</h3>
                         </div>
