--- a/EduHome/Views/Shared/_Layout.cshtml
+++ b/EduHome/Views/Shared/_Layout.cshtml
@@ -47,8 +47,8 @@
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="header-top-right text-right">
                             <ul>
-                                <li><a asp-controller="login">login</a></li>
-                                <li><a asp-controller="signup">signup</a></li>
+                                <li><a asp-controller="login" asp-action="index">login</a></li>
+                                <li><a asp-controller="signup" asp-action="index">signup</a></li>
                             </ul>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="logo">
-                            <a asp-controller="home"><img src="~/img/logo/@settings.FirstOrDefault(s=>s.Key=="Logo").Value" alt="eduhome" /></a>
+                            <a asp-controller="home" asp-action="index"><img src="~/img/logo/@settings.FirstOrDefault(s=>s.Key=="Logo").Value" alt="eduhome" /></a>
                         </div>
                     </div>
                     <div class="col-md-9 col-sm-9 col-xs-6">
@@ -70,15 +70,15 @@
                                 <nav>
                                     <ul>
                                         <li>
-                                            <a asp-controller="home">Home</a>
+                                            <a asp-controller="home" asp-action="index">Home</a>
                                         </li>
-                                        <li><a asp-controller="about">About</a></li>
+                                        <li><a asp-controller="about" asp-action="index">About</a></li>
                                         <li>
-                                            <a asp-controller="course">courses</a>
+                                            <a asp-controller="course" asp-action="index">courses</a>
 
                                         </li>
                                         <li>
-                                            <a asp-controller="event">event</a>
+                                            <a asp-controller="event" asp-action="index">event</a>
 
                                         </li>
                                         <li>
@@ -89,7 +89,7 @@
                                             <a asp-controller="blog" asp-action="index">blog</a>
 
                                         </li>
-                                        <li><a asp-controller="contact">Contact</a></li>
+                                        <li><a asp-controller="contact" asp-action="index">Contact</a></li>
                                         <li><a href="#">Buy Now</a>
                                     </ul>
                                 </nav>
@@ -168,7 +168,7 @@
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="single-widget pr-60">
                             <div class="footer-logo pb-25">
-                                <a asp-controller="home"><img src="~/img/logo/@settings.FirstOrDefault(s=>s.Key=="Logo").Value" alt="eduhome"></a>
+                                <a asp-controller="home" asp-action="index"><img src="~/img/logo/@settings.FirstOrDefault(s=>s.Key=="Logo").Value" alt="eduhome"></a>
                             </div>
                             <p>@settings.FirstOrDefault(s => s.Key == "Description").Value</p>
                             <div class="footer-social">
@@ -197,11 +197,11 @@
                         <div class="single-widget">
                             <h3>useful links</h3>
                             <ul>
-                                <li><a asp-controller="course">our courses</a></li>
-                                <li><a asp-controller="about">about us</a></li>
-                                <li><a asp-controller="teacher">teachers &amp; faculty</a></li>
+                                <li><a asp-controller="course" asp-action="index">our courses</a></li>
+                                <li><a asp-controller="about" asp-action="index">about us</a></li>
+                                <li><a asp-controller="teacher" asp-action="index">teachers &amp; faculty</a></li>
                                 <li><a href="#">teams &amp; conditions</a></li>
-                                <li><a asp-controller="event">our events</a></li>
+                                <li><a asp-controller="event" asp-action="index">our events</a></li>
                             </ul>
                         </div>
                     </div>
