--- a/EduHome/Views/Teacher/Detail.cshtml
+++ b/EduHome/Views/Teacher/Detail.cshtml
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-5 col-sm-5 col-xs-12">
                 <div class="teacher-details-img">
-                    <img src="~/img/teacher/@Model.Image" alt="teacher">
+                    <img width="100%" src="~/img/teacher/@Model.Image" alt="teacher">
                 </div>
             </div>
             <div class="col-md-7 col-sm-7 col-xs-12">
@@ -23,7 +23,7 @@
                     <p>@Model.About</p>
                     <ul>
                         <li><span>degree: </span>@Model.Degree</li>
-                        <li><span>experience: </span>@Model.Experience years experience</li>
+                        <li><span>experience: </span>@Model.Experience experience</li>
                         <li><span>hobbies: </span>@Model.Hobbies</li>
                         <li><span>faculty: </span>@Model.Faculty</li>
                     </ul>
@@ -51,66 +51,20 @@
                 </div>
                 <div class="skill-wrapper">
                     <div class="row">
+                        @foreach (TeacherSkill item in Model.TeacherSkills)
+                        {
                         <div class="col-sm-4">
                             <div class="skill-bar-item">
-                                <span>language</span>
+                                <span>@item.Skill.Name</span>
                                 <div class="progress">
-                                    <div data-wow-delay="1.2s" data-wow-duration="1.5s" style="width: 85%; visibility: visible; animation-duration: 1.5s; animation-delay: 1.2s; animation-name: fadeInLeft;" data-progress="50%" class="progress-bar wow fadeInLeft">
-                                        <span class="text-top">85%</span>
+                                    <div data-wow-delay="1.2s" data-wow-duration="1.5s" style="width: @(item.Skill.ProgressPercentage)%; visibility: visible; animation-duration: 1.5s; animation-delay: 1.2s; animation-name: fadeInLeft;" data-progress="50%" class="progress-bar wow fadeInLeft">
+                                        <span class="text-top">@item.Skill.ProgressPercentage%</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="skill-bar-item">
-                                <span>team leader</span>
-                                <div class="progress">
-                                    <div data-wow-delay="1.2s" data-wow-duration="1.5s" style="width: 90%; visibility: visible; animation-duration: 1.5s; animation-delay: 1.2s; animation-name: fadeInLeft;" data-progress="50%" class="progress-bar wow fadeInLeft">
-                                        <span class="text-top">90%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="skill-bar-item">
-                                <span>development</span>
-                                <div class="progress">
-                                    <div data-wow-delay="1.2s" data-wow-duration="1.5s" style="width: 85%; visibility: visible; animation-duration: 1.5s; animation-delay: 1.2s; animation-name: fadeInLeft;" data-progress="50%" class="progress-bar wow fadeInLeft">
-                                        <span class="text-top">85%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="skill-bar-item">
-                                <span>design</span>
-                                <div class="progress">
-                                    <div data-wow-delay="1.2s" data-wow-duration="1.5s" style="width: 95%; visibility: visible; animation-duration: 1.5s; animation-delay: 1.2s; animation-name: fadeInLeft;" data-progress="50%" class="progress-bar wow fadeInLeft">
-                                        <span class="text-top">95%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="skill-bar-item">
-                                <span>innovation</span>
-                                <div class="progress">
-                                    <div data-wow-delay="1.2s" data-wow-duration="1.5s" style="width: 85%; visibility: visible; animation-duration: 1.5s; animation-delay: 1.2s; animation-name: fadeInLeft;" data-progress="50%" class="progress-bar wow fadeInLeft">
-                                        <span class="text-top">85%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="skill-bar-item">
-                                <span>communication</span>
-                                <div class="progress">
-                                    <div data-wow-delay="1.2s" data-wow-duration="1.5s" style="width: 95%; visibility: visible; animation-duration: 1.5s; animation-delay: 1.2s; animation-name: fadeInLeft;" data-progress="50%" class="progress-bar wow fadeInLeft">
-                                        <span class="text-top">95%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                            
+                        }
                     </div>
                 </div>
             </div>
