--- a/EduHome/Views/Blog/Detail.cshtml
+++ b/EduHome/Views/Blog/Detail.cshtml
@@ -13,39 +13,16 @@
             <div class="col-md-8">
                 <div class="blog-details">
                     <div class="blog-details-img">
-                        <img src="~/img/blog/blog-detail.jpg" alt="blog-details">
+                        <img width="100%" src="~/img/blog/blog-detail.jpg" alt="blog-details">
                     </div>
                     <div class="blog-details-content">
-                        <h2>I must explain to you how all this a mistaken idea </h2>
-                        <h6>By Alex  /  June 20, 2017  /  <i class="fa fa-comments-o"></i> 4</h6>
-                        <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human haness pcias unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque sa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam volutatem quia voluptas sit asnatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui </p>
-                        <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human haness pcias unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
-                        <p class="quote">I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human haness pcias unde omnis iste natus error sit voluptatem accusantium doloremque la udantium, totam rem aperiam</p>
-                        <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human haness pcias unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque sa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo emo enim ipsam</p>
+                        <h2>@Model.Title</h2>
+                        <h6>By @Model.Author  /  @Model.Date.ToString("MMMM dd, yyyy")  /  <i class="fa fa-comments-o"></i> 4</h6>
+                        <p>@Model.Description</p>
                     </div>
                     <div class="reply-area">
                         <h3>LEAVE A REPLY</h3>
-                        <p>I must explain to you how all this a mistaken idea of ncing great explorer of the rut<br> the is lder of human happinescias unde omnis iste natus error sit volptatem </p>
-                        <form id="contact-form" action="http://demo.devitems.com/eduhome/mail.php" method="post">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <p>Name</p>
-                                    <input type="text" name="name" id="name">
-                                </div>
-                                <div class="col-md-12">
-                                    <p>Email</p>
-                                    <input type="text" name="email" id="email">
-                                </div>
-                                <div class="col-md-12">
-                                    <p>Subject</p>
-                                    <input type="text" name="subject" id="subject">
-                                    <p>Massage</p>
-                                    <textarea name="message" id="message" cols="15" rows="10"></textarea>
-                                </div>
-                            </div>
-                            <a class="reply-btn" href="#" data-text="send"><span>send message</span></a>
-                            <p class="form-messege"></p>
-                        </form>
+                       @(await Html.PartialAsync("_LeaveReplyPartial"))
                     </div>
                 </div>
             </div>
