--- a/EduHome/Views/Shared/_TeacherPartial.cshtml
+++ b/EduHome/Views/Shared/_TeacherPartial.cshtml
@@ -2,10 +2,10 @@
 <div class="col-md-3 col-sm-4 col-xs-12 mt-40">
     <div class="single-teacher">
         <div class="single-teacher-img">
-            <a asp-controller="teacher" asp-action="detail"><img src="~/img/teacher/@Model.Image" alt="teacher"></a>
+            <a asp-controller="teacher" asp-action="detail" asp-route-id="@Model.Id"><img src="~/img/teacher/@Model.Image" alt="teacher"></a>
         </div>
         <div class="single-teacher-content text-center">
-            <h2><a asp-controller="teacher" asp-action="detail">@Model.Name @Model.Surname</a></h2>
+            <h2><a asp-controller="teacher" asp-action="detail" asp-route-id="@Model.Id">@Model.Name @Model.Surname</a></h2>
             <h4>@Model.Profession</h4>
             <ul>
                 <li><a href="@Model.FacebookUrl"><i class="zmdi zmdi-facebook"></i></a></li>
