--- a/EduHome/Views/Shared/_Layout.cshtml
+++ b/EduHome/Views/Shared/_Layout.cshtml
@@ -35,98 +35,7 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- Header Area Start -->
-    <header class="top">
-        <div class="header-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-sm-8 col-xs-12">
-                        <div class="header-top-left">
-                            <p>HAVE ANY QUESTION ?  @settings.FirstOrDefault(s => s.Key == "CallCenter").Value</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12">
-                        <div class="header-top-right text-right">
-                            <ul>
-                                <li><a asp-controller="login" asp-action="index">login</a></li>
-                                <li><a asp-controller="signup" asp-action="index">signup</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="header-area two header-sticky">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="logo">
-                            <a asp-controller="home" asp-action="index"><img src="~/img/logo/@settings.FirstOrDefault(s=>s.Key=="Logo").Value" alt="eduhome" /></a>
-                        </div>
-                    </div>
-                    <div class="col-md-9 col-sm-9 col-xs-6">
-                        <div class="content-wrapper text-right">
-                            <!-- Main Menu Start -->
-                            <div class="main-menu">
-                                <nav>
-                                    <ul>
-                                        <li>
-                                            <a asp-controller="home" asp-action="index">Home</a>
-                                        </li>
-                                        <li><a asp-controller="about" asp-action="index">About</a></li>
-                                        <li>
-                                            <a asp-controller="course" asp-action="index">courses</a>
-
-                                        </li>
-                                        <li>
-                                            <a asp-controller="event" asp-action="index">event</a>
-
-                                        </li>
-                                        <li>
-                                            <a asp-controller="teacher">teacher</a>
-
-                                        </li>
-                                        <li>
-                                            <a asp-controller="blog" asp-action="index">blog</a>
-
-                                        </li>
-                                        <li><a asp-controller="contact" asp-action="index">Contact</a></li>
-                                        <li><a href="#">Buy Now</a>
-                                    </ul>
-                                </nav>
-                            </div>
-                            <!--Search Form Start-->
-                            <div class="search-btn">
-                                <ul id="headerSearch" data-toggle="dropdown" class="header-search search-toggle">
-                                    <li class="search-menu">
-                                        <i class="fa fa-search"></i>
-                                    </li>
-                                </ul>
-                                <div class="search">
-                                    <div class="search-form">
-                                        <form id="search-form" action="#">
-                                            <input class="InputForSearch" type="search" placeholder="Search here..." name="search" />
-                                            <button id="searchBtn" type="submit">
-                                                <span><i class="fa fa-search"></i></span>
-                                            </button>
-                                        </form>
-
-                                        <ul id="searchResult" style="border: 1px solid; background-color:white; text-decoration:none; width: 100%; height: auto; position: absolute; z-index: 8;">
-                                           
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--End of Search Form-->
-                            <!-- Main Menu End -->
-                        </div>
-                    </div>
-                    <div class="col-xs-12">
-                        <div class="mobile-menu hidden-lg hidden-md hidden-sm"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+  @(await Component.InvokeAsync("Header", settings))
     <!-- Header Area End -->
     @RenderBody()
     <!-- Subscribe Start -->
@@ -161,71 +70,7 @@
     </div>
     <!-- Subscribe End -->
     <!-- Footer Start -->
-    <footer class="footer-area">
-        <div class="main-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                        <div class="single-widget pr-60">
-                            <div class="footer-logo pb-25">
-                                <a asp-controller="home" asp-action="index"><img src="~/img/logo/@settings.FirstOrDefault(s=>s.Key=="Logo").Value" alt="eduhome"></a>
-                            </div>
-                            <p>@settings.FirstOrDefault(s => s.Key == "Description").Value</p>
-                            <div class="footer-social">
-                                <ul>
-                                    <li><a href="#"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="single-widget">
-                            <h3>information</h3>
-                            <ul>
-                                <li><a href="#">addmission</a></li>
-                                <li><a href="#">Academic Calender</a></li>
-                                <li><a href="event.html">Event List</a></li>
-                                <li><a href="#">Hostel &amp; Dinning</a></li>
-                                <li><a href="#">TimeTable</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-sm-6 col-xs-12">
-                        <div class="single-widget">
-                            <h3>useful links</h3>
-                            <ul>
-                                <li><a asp-controller="course" asp-action="index">our courses</a></li>
-                                <li><a asp-controller="about" asp-action="index">about us</a></li>
-                                <li><a asp-controller="teacher" asp-action="index">teachers &amp; faculty</a></li>
-                                <li><a href="#">teams &amp; conditions</a></li>
-                                <li><a asp-controller="event" asp-action="index">our events</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="single-widget">
-                            <h3>get in touch</h3>
-                            <p>@Html.Raw(settings.FirstOrDefault(s => s.Key == "Address").Value)</p>
-                            <p>@settings.FirstOrDefault(s => s.Key == "CallCenter").Value</p>
-                            <p>@settings.FirstOrDefault(s => s.Key == "Email").Value<br>www.eduhome.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom text-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <p>Copyright © <a href="#" target="_blank">HasTech</a> 2017. All Right Reserved By Hastech.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    @await Component.InvokeAsync("Footer", settings)
     <!-- Footer End -->
 
     <script src="~/js/vendor/jquery-1.12.0.min.js"></script>
