i just did some changes

--- a/EduHomeBack/EduHomeBack/Views/About/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/About/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Index";
 }
 
@@ -10,7 +11,7 @@
 <div class="about-area pb-135 pt-130">
     <div class="container">
         <div class="row">
-            @(await Component.InvokeAsync("AboutEduHome"))
+            @(await Component.InvokeAsync("About"))
 
         </div>
     </div>
