--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -60,6 +60,14 @@
                 </a>
             </li>
             <div class="sidebar-heading">
+                Course
+            </div>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Course" asp-action="index">
+                    <span>Course</span>
+                </a>
+            </li>
+            <div class="sidebar-heading">
                 Banner
             </div>
             <li class="nav-item active">
