just random things added

--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -76,6 +76,26 @@
                 </a>
             </li>
 
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Blog" asp-action="index">
+                    <span>Blog</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Event" asp-action="index">
+                    <span>Event</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="NoticeBoard" asp-action="index">
+                    <span>NoticeBoard</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Position" asp-action="index">
+                    <span>Position</span>
+                </a>
+            </li>
 
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
